--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,10 +21,14 @@ android {
 
 dependencies {
   compile fileTree(include: ['*.jar'], dir: 'libs')
-  androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-    exclude group: 'com.android.support', module: 'support-annotations'
-  })
-  testCompile 'junit:junit:4.12'
   compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
   compile project(':awesomelib')
+  // Testing-only dependencies
+  androidTestCompile 'com.android.support:support-annotations:26.0.0-alpha1'
+  // local unit test
+  testCompile 'junit:junit:4.12'
+  testCompile 'org.mockito:mockito-core:1.10.19'
+  // ui android test
+  androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2')
+  androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
 }
