--- a/awesomelib/build.gradle
+++ b/awesomelib/build.gradle
@@ -1,5 +1,31 @@
 apply plugin: 'com.android.library'
 
+ext {
+  bintrayRepo = 'awesomelib'
+  bintrayName = 'awesomelib'   // Has to be same as your library module name
+
+  publishedGroupId = 'com.github.tuanbaros'
+  libraryName = 'AwesomeLib'
+  artifact = 'awesomelib'     // Has to be same as your library module name
+
+  libraryDescription = 'Android Library to make any text into Toast with Awesome prepended to the text'
+
+  // Your github repo link
+  siteUrl = 'https://github.com/tuanbaros/demolib.git'
+  gitUrl = 'https://github.com/tuanbaros/demolib.git'
+  githubRepository= 'tuanbaros/demolib'
+
+  libraryVersion = '1.1'
+
+  developerId = 'tuanbaros'
+  developerName = 'Tuan Nguyen'
+  developerEmail = 'tuanbaros@yahoo.com.vn'
+
+  licenseName = 'The Apache Software License, Version 2.0'
+  licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+  allLicenses = ["Apache-2.0"]
+}
+
 android {
   compileSdkVersion 26
   buildToolsVersion "26.0.0"
@@ -7,8 +33,8 @@ android {
   defaultConfig {
     minSdkVersion 14
     targetSdkVersion 26
-    versionCode 1
-    versionName "1.0"
+    versionCode 2
+    versionName "1.1"
 
     testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
   }
@@ -28,3 +54,6 @@ dependencies {
   compile 'com.android.support:appcompat-v7:26.+'
   testCompile 'junit:junit:4.12'
 }
+
+apply from: 'https://raw.githubusercontent.com/nisrulz/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nisrulz/JCenter/master/bintrayv1.gradle'
