--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: "se.bjurr.violations.violation-comments-to-github-gradle-plugin"
 
 android {
   compileSdkVersion 26
@@ -17,6 +18,27 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
+}
+
+task violationCommentsToGitHub(type: se.bjurr.violations.comments.github.plugin.gradle.ViolationCommentsToGitHubTask) {
+  repositoryOwner = "tuanbaros";
+  repositoryName = "demolib"
+  pullRequestId = System.properties['GITHUB_PULLREQUESTID']
+  username = System.properties['GITHUB_USERNAME']
+  password = System.properties['GITHUB_PASSWORD']
+  oAuth2Token = System.properties['GITHUB_OAUTH2TOKEN']
+  gitHubUrl = "https://api.github.com/"
+  createCommentWithAllSingleFileComments = false
+  createSingleFileComments = true
+  commentOnlyChangedContent = true
+  minSeverity = se.bjurr.violations.lib.model.SEVERITY.INFO //ERROR, INFO, WARN
+  violations = [
+      ["FINDBUGS",   ".", ".*/findbugs/.*\\.xml\$",   "Findbugs"],
+      ["PMD",        ".", ".*/pmd/.*\\.xml\$",        "PMD"],
+      ["CHECKSTYLE", ".", ".*/checkstyle/.*\\.xml\$", "Checkstyle"],
+      ["JSHINT",     ".", ".*/jshint/.*\\.xml\$",     "JSHint"],
+      ["CSSLINT",    ".", ".*/csslint/.*\\.xml\$",     "CssLint"]
+  ]
 }
 
 dependencies {
