--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,15 @@
 buildscript {
   repositories {
     jcenter()
+    maven {
+      url "https://plugins.gradle.org/m2/"
+    }
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:2.3.3'
     classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7'
     classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
+    classpath "se.bjurr.violations:violation-comments-to-github-gradle-plugin:1.27"
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
   }
